--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,11 @@
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
     "test:ci": "NODE_OPTIONS=--experimental-vm-modules jest --coverage --ci --maxWorkers=2"
   },
-  "keywords": ["express", "api", "personal-website"],
+  "keywords": [
+    "express",
+    "api",
+    "personal-website"
+  ],
   "author": "Michael Charno",
   "license": "ISC",
   "dependencies": {
@@ -23,9 +27,9 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
     "@jest/globals": "^29.7.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.11",
     "supertest": "^6.3.4"
   }
 }
