feat: Configure CI/CD for ARM64 builds and migrate to web namespace
- Update GitHub Actions to build ARM64 Docker images for Raspberry Pi
- Add QEMU and Buildx setup for cross-platform builds
- Migrate namespace from charno-web to web
- Fix PVC access mode to ReadWriteOnce
- Reduce resource requests to fit cluster capacity
- Scale deployments to 1 replica

--- a/infra/k8s/base/configmap.yaml
+++ b/infra/k8s/base/configmap.yaml
@@ -2,9 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: charno-config
-  namespace: charno-web
   labels:
-    app: charno-web
+    app: web
 data:
   # Database configuration - Update these to point to your existing Postgres instance
   # If Postgres is in a different namespace: postgres-service.postgres-namespace.svc.cluster.local
@@ -14,4 +13,4 @@ data:
   db_name: "charno_web"  # Update with your database name
 
   # API URL for frontend (update with your domain)
-  api_url: "http://charno-backend.charno-web.svc.cluster.local:3080"
+  api_url: "http://charno-backend.web.svc.cluster.local:3080"
