--- a/infra/k8s/base/secret-template.yaml
+++ b/infra/k8s/base/secret-template.yaml
@@ -4,7 +4,7 @@
 # kubectl create secret generic charno-secrets \
 #   --from-literal=db_user=YOUR_DB_USER \
 #   --from-literal=db_password=YOUR_DB_PASSWORD \
-#   -n charno-web
+#   -n web
 #
 # Or use sealed-secrets or external-secrets operator for GitOps
 
@@ -12,9 +12,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: charno-secrets
-  namespace: charno-web
   labels:
-    app: charno-web
+    app: web
 type: Opaque
 stringData:
   db_user: "REPLACE_WITH_YOUR_DB_USER"
