--- a/infra/k8s/base/kustomization.yaml
+++ b/infra/k8s/base/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: charno-web
+namespace: web
 
 resources:
   - namespace.yaml
@@ -17,7 +17,7 @@ resources:
   - ingress.yaml
 
 commonLabels:
-  app.kubernetes.io/name: charno-web
+  app.kubernetes.io/name: web
   app.kubernetes.io/managed-by: argocd
 
 images:
