ci: Update image tags to main-ddf033ccdd08ba6e55e5c976fbf48d1e4332b45f
Updated frontend and backend image tags to use ARM64 builds with nginx permission fixes.

This manually applies the update that the GitHub Actions workflow should have done automatically.

--- a/infra/k8s/base/kustomization.yaml
+++ b/infra/k8s/base/kustomization.yaml
@@ -22,6 +22,6 @@ commonLabels:
 
 images:
   - name: ghcr.io/mcharno/charno-backend
-    newTag: latest
+    newTag: main-ddf033ccdd08ba6e55e5c976fbf48d1e4332b45f
   - name: ghcr.io/mcharno/charno-frontend
-    newTag: latest
+    newTag: main-ddf033ccdd08ba6e55e5c976fbf48d1e4332b45f
