feat: Configure charno.net domain ingresses for external and local access
- Created ingress-external.yaml for charno.net and www.charno.net
- Created ingress-local.yaml for charno.local.charn.io
- Configured nginx-ingress class with TLS/HTTPS
- Added wildcard TLS certificates to web namespace
- Updated backend port from 5000 to 3080 in ingresses
- Removed old placeholder ingress.yaml
- Both external and local ingresses now properly route:
  - /api -> charno-backend:3080
  - / -> charno-frontend:3000

External access: https://charno.net, https://www.charno.net
Local access: https://charno.local.charn.io

--- a/infra/k8s/base/kustomization.yaml
+++ b/infra/k8s/base/kustomization.yaml
@@ -14,7 +14,8 @@ resources:
   - backend-service.yaml
   - frontend-deployment.yaml
   - frontend-service.yaml
-  - ingress.yaml
+  - ingress-external.yaml
+  - ingress-local.yaml
 
 commonLabels:
   app.kubernetes.io/name: web
@@ -22,6 +23,6 @@ commonLabels:
 
 images:
   - name: ghcr.io/mcharno/charno-backend
-    newTag: main-ddf033ccdd08ba6e55e5c976fbf48d1e4332b45f
+    newTag: main
   - name: ghcr.io/mcharno/charno-frontend
-    newTag: main-ddf033ccdd08ba6e55e5c976fbf48d1e4332b45f
+    newTag: main
