feat: Add lod.charno.net ingress for linked-data-service
- Created lod-ingress-external.yaml for lod.charno.net
- Created lod-ingress-local.yaml for lod.local.charn.io
- Updated kustomization.yaml to include new ingress files
- Both ingresses route to linked-data-service:3000

External access: https://lod.charno.net
Local access: https://lod.local.charn.io

--- a/infra/k8s/base/kustomization.yaml
+++ b/infra/k8s/base/kustomization.yaml
@@ -16,6 +16,8 @@ resources:
   - frontend-service.yaml
   - ingress-external.yaml
   - ingress-local.yaml
+  - lod-ingress-external.yaml
+  - lod-ingress-local.yaml
 
 commonLabels:
   app.kubernetes.io/name: web
