fix: Change API URL to relative path for browser requests
- Changed api_url from internal cluster URL to '/api'
- Browser requests now go through ingress routing
- Fixes CSP errors blocking API calls
- Ingress routes /api -> charno-backend:3080

The internal cluster URL (charno-backend.web.svc.cluster.local:3080)
doesn't work from browsers and was being blocked by CSP.

--- a/infra/k8s/base/configmap.yaml
+++ b/infra/k8s/base/configmap.yaml
@@ -12,5 +12,5 @@ data:
   db_port: "5432"
   db_name: "charno_web"  # Update with your database name
 
-  # API URL for frontend (update with your domain)
-  api_url: "http://charno-backend.web.svc.cluster.local:3080"
+  # API URL for frontend - use relative path so requests go through ingress
+  api_url: "/api"
