Fix for styling problems

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -35,10 +35,13 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache static assets
+    # Cache static assets with content hash (versioned files can be cached forever)
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        add_header X-Content-Type-Options "nosniff" always;
+        # Ensure ETag is set for cache validation
+        etag on;
     }
 
     # Don't cache index.html
