--- a/infra/k8s/base/kustomization.yaml
+++ b/infra/k8s/base/kustomization.yaml
@@ -25,6 +25,6 @@ commonLabels:
 
 images:
   - name: ghcr.io/mcharno/charno-backend
-    newTag: main-8a0868ad67c049a8c3e66ddebe0e5ef12d0c22b0
+    newTag: main-8a0868a
   - name: ghcr.io/mcharno/charno-frontend
-    newTag: main-8a0868ad67c049a8c3e66ddebe0e5ef12d0c22b0
+    newTag: main-8a0868a
