feat: Setup photo galleries with local/server separation
- Add 15 photo galleries (1 local dev, 14 server-only)
- 2600 gallery for local development with placeholder photos
- Server-only galleries: Sikyon, Stymphalos, Cricket, Airplanes,
  Cold War, Creatures, DC, Nights, Jordan, Kyrgyzstan, Pace Egging,
  Russia, Sunsets, Wedding
- Update .gitignore to exclude server photos except 2600
- Add comprehensive photo management documentation
- All galleries ready for photo uploads via kubectl

The photo system now separates local development (2600 gallery
with photos in repo) from production galleries (metadata in repo,
photos on server PVC). This allows testing locally while keeping
the repository size small.

Documentation:
- PHOTO_MANAGEMENT.md: Complete upload and maintenance guide
- PHOTO_GALLERIES_SETUP.md: Quick reference for all galleries

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,10 @@ Thumbs.db
 # Kubernetes secrets (never commit real secrets!)
 k8s/base/secret.yaml
 k8s/overlays/*/secret.yaml
+
+# Photo galleries
+# Exclude all photos by default (they live on the server)
+frontend/public/images/photos/*
+# But include the 2600 gallery for local development
+!frontend/public/images/photos/2600/
+!frontend/public/images/photos/2600/*
