--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "gray-matter": "^4.0.3",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
