--- a/infra/k8s/base/kustomization.yaml
+++ b/infra/k8s/base/kustomization.yaml
@@ -19,6 +19,7 @@ resources:
   - ingress-local.yaml
   - lod-ingress-external.yaml
   - lod-ingress-local.yaml
+  - ghcr-sealed-secret.yaml
 
 commonLabels:
   app.kubernetes.io/name: web
