Updates from Claude

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,32 +1,15 @@
-name: CI/CD Pipeline
+name: CI
 
 on:
-  push:
-    branches:
-      - main
-      - develop
   pull_request:
-    branches:
-      - main
-      - develop
-
-env:
-  REGISTRY: ghcr.io
-  BACKEND_IMAGE: ghcr.io/${{ github.repository_owner }}/charno-backend
-  FRONTEND_IMAGE: ghcr.io/${{ github.repository_owner }}/charno-frontend
+    branches: [main]
 
 jobs:
-  # Backend build and test
-  backend-build:
-    name: Build Backend
+  backend-ci:
+    name: Backend Tests
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -37,79 +20,21 @@ jobs:
         run: corepack enable
 
       - name: Install dependencies
-        working-directory: ./backend
         run: yarn install --frozen-lockfile
 
       - name: Run linter
-        working-directory: ./backend
-        run: yarn lint || echo "Linter not configured, skipping..."
+        run: yarn workspace backend lint || echo "Linter not configured, skipping..."
         continue-on-error: true
 
-      - name: Run tests with coverage
-        working-directory: ./backend
-        run: yarn test:ci
+      - name: Run tests
+        run: yarn workspace backend test:ci
         continue-on-error: true
 
-      - name: Upload backend coverage report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: backend-coverage
-          path: backend/coverage/
-
-      - name: Set up QEMU
-        if: github.event_name != 'pull_request'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
-      - name: Set up Docker Buildx
-        if: github.event_name != 'pull_request'
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.BACKEND_IMAGE }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image
-        if: github.event_name != 'pull_request'
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./backend/Dockerfile
-          platforms: linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # Frontend build and test
-  frontend-build:
-    name: Build Frontend
+  frontend-ci:
+    name: Frontend Tests
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -120,127 +45,15 @@ jobs:
         run: corepack enable
 
       - name: Install dependencies
-        working-directory: ./frontend
         run: yarn install --frozen-lockfile
 
       - name: Run linter
-        working-directory: ./frontend
-        run: yarn lint || echo "Linter not configured, skipping..."
+        run: yarn workspace frontend lint || echo "Linter not configured, skipping..."
         continue-on-error: true
 
-      - name: Run tests with coverage
-        working-directory: ./frontend
-        run: yarn test:ci
+      - name: Run tests
+        run: yarn workspace frontend test:ci
         continue-on-error: true
 
-      - name: Upload frontend coverage report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: frontend-coverage
-          path: frontend/coverage/
-
-      - name: Build application
-        working-directory: ./frontend
-        run: yarn build
-
-      - name: Set up QEMU
-        if: github.event_name != 'pull_request'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
-      - name: Set up Docker Buildx
-        if: github.event_name != 'pull_request'
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.FRONTEND_IMAGE }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image
-        if: github.event_name != 'pull_request'
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./frontend/Dockerfile
-          platforms: linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # Update Kubernetes manifests with new image tags
-  update-manifests:
-    name: Update K8s Manifests
-    runs-on: ubuntu-latest
-    needs: [backend-build, frontend-build]
-    if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-    permissions:
-      contents: write
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Update image tags in kustomization
-        run: |
-          cd infra/k8s/base
-          # Update kustomization.yaml with new image tags
-          sed -i "s|newTag:.*|newTag: main-${{ github.sha }}|g" kustomization.yaml
-
-      - name: Check for changes
-        id: check_changes
-        run: |
-          if git diff --quiet infra/k8s/base/kustomization.yaml; then
-            echo "changed=false" >> $GITHUB_OUTPUT
-          else
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Commit and push to branch
-        if: steps.check_changes.outputs.changed == 'true'
-        run: |
-          BRANCH_NAME="ci/update-manifests-${{ github.sha }}"
-
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
-          git checkout -b "$BRANCH_NAME"
-          git add infra/k8s/base/kustomization.yaml
-          git commit -m "ci: Update image tags to main-${{ github.sha }}"
-          git push -u origin "$BRANCH_NAME"
-
-          echo "✅ Branch created: $BRANCH_NAME"
-          echo "📦 Backend: ${{ env.BACKEND_IMAGE }}:main-${{ github.sha }}"
-          echo "📦 Frontend: ${{ env.FRONTEND_IMAGE }}:main-${{ github.sha }}"
-          echo ""
-          echo "📋 Next steps:"
-          echo "1. Create a PR from branch: $BRANCH_NAME"
-          echo "2. Review and merge the PR"
-          echo "3. ArgoCD will automatically sync within 3 minutes"
-          echo ""
-          echo "🔗 Create PR: https://github.com/${{ github.repository }}/compare/$BRANCH_NAME?expand=1"
-
-      - name: No changes needed
-        if: steps.check_changes.outputs.changed == 'false'
-        run: |
-          echo "ℹ️ No changes to image tags, branch not created"
+      - name: Build
+        run: yarn workspace frontend build
